Source/WebCore/platform/graphics/FontCascade.h
@@ -158,7 +158,7 @@ public:
     FontRenderingMode renderingMode() const { return m_fontDescription.renderingMode(); }
 
     bool enableKerning() const { return m_enableKerning; }
-    bool enableLigatures() const { return m_enableLigatures; }
+    bool requiresShaping() const { return m_requiresShaping; }
 
     const AtomicString& firstFamily() const { return m_fontDescription.firstFamily(); }
     unsigned familyCount() const { return m_fontDescription.familyCount(); }
@@ -321,13 +321,12 @@ private:
         return advancedTextRenderingMode();
     }
 
-    bool computeEnableLigatures() const
+    bool computeRequiresShaping() const
     {
-        auto ligatures = m_fontDescription.variantCommonLigatures();
-        if (ligatures == FontVariantLigatures::Yes)
+        if (!m_fontDescription.variantSettings().isAllNormal())
             return true;
-        if (ligatures == FontVariantLigatures::No)
-            return false;
+        if (m_fontDescription.featureSettings().size())
+            return true;
         return advancedTextRenderingMode();
     }
 
@@ -338,7 +337,7 @@ private:
     float m_wordSpacing;
     mutable bool m_useBackslashAsYenSymbol;
     mutable unsigned m_enableKerning : 1; // Computed from m_fontDescription.
-    mutable unsigned m_enableLigatures : 1; // Computed from m_fontDescription.
+    mutable unsigned m_requiresShaping : 1; // Computed from m_fontDescription.
 };
 
 void invalidateFontCascadeCache();
